Fix My Releases on mobile

--- a/res/style.css
+++ b/res/style.css
@@ -478,6 +478,7 @@ a.navlink {
     display: flex;
     flex:    1 1;
     flex-flow: column;
+    min-width: 250px;
     
 }
 .mainreleaselist {
@@ -1082,18 +1083,18 @@ textarea {
         flex-flow: column;
     }
     .inlineselect {
-    margin-bottom: 10px;
+        margin-bottom: 10px;
     }
     .resptablecol {
-    display: none;
+        display: none;
     }
     .multisearch {
-    margin-right: 30px;
+        margin-right: 30px;
     }
     ul.footernavbar li:not(:first-child)::before {
-    content: '';
+        content: '';
     }
     .plugin-index {
-    flex-flow: column;
-}
+        display: block;
+    }
 }
